fix footer text-align

--- a/css/style.css
+++ b/css/style.css
@@ -89,6 +89,7 @@ ul.posts span {
 
 footer {
     padding-bottom: 20px;
+    text-align: center;
 }
 
 ::selection {
